--- a/docs/source/markdown/podman-machine-start.1.md.in
+++ b/docs/source/markdown/podman-machine-start.1.md.in
@@ -39,6 +39,8 @@ Suppress informational tips.
 
 Suppress machine starting status output.
 
+@@option update-connection
+
 ## EXAMPLES
 
 Start the specified podman machine.
